// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`version > creates simple PR 1`] = `
{
  "body": {
    "base": "some-branch",
    "body": "This PR was opened by the [Changesets release](https://github.com/anytinz/changesets-gitea-action) Gitea action. When you're ready to do a release, you can merge this and publish to npm yourself or [setup this action to publish automatically](https://github.com/anytinz/changesets-gitea-action#with-publishing). If you're not ready to do a release yet, that's fine, whenever you add more changesets to some-branch, this PR will be updated.


# Releases
## changesets-dev-simple-project-pkg-a@1.1.0

### Minor Changes

- Awesome feature

### Patch Changes

- Updated dependencies
  - changesets-dev-simple-project-pkg-b@1.1.0
## changesets-dev-simple-project-pkg-b@1.1.0

### Minor Changes

- Awesome feature",
    "head": "changeset-release/some-branch",
    "title": "Version Packages",
  },
  "params": {
    "path": {
      "owner": "changesets",
      "repo": "action",
    },
  },
}
`;

exports[`version > does not include any release information if a message with simplified release info exceeds size limit 1`] = `
{
  "body": {
    "base": "some-branch",
    "body": "This PR was opened by the [Changesets release](https://github.com/anytinz/changesets-gitea-action) Gitea action. When you're ready to do a release, you can merge this and publish to npm yourself or [setup this action to publish automatically](https://github.com/anytinz/changesets-gitea-action#with-publishing). If you're not ready to do a release yet, that's fine, whenever you add more changesets to some-branch, this PR will be updated.


# Releases

> All release information have been omitted from this message, as the content exceeds the size limit.",
    "head": "changeset-release/some-branch",
    "title": "Version Packages",
  },
  "params": {
    "path": {
      "owner": "changesets",
      "repo": "action",
    },
  },
}
`;

exports[`version > does not include changelog entries if full message exceeds size limit 1`] = `
{
  "body": {
    "base": "some-branch",
    "body": "This PR was opened by the [Changesets release](https://github.com/anytinz/changesets-gitea-action) Gitea action. When you're ready to do a release, you can merge this and publish to npm yourself or [setup this action to publish automatically](https://github.com/anytinz/changesets-gitea-action#with-publishing). If you're not ready to do a release yet, that's fine, whenever you add more changesets to some-branch, this PR will be updated.


# Releases

> The changelog information of each package has been omitted from this message, as the content exceeds the size limit.

## changesets-dev-simple-project-pkg-a@1.1.0

",
    "head": "changeset-release/some-branch",
    "title": "Version Packages",
  },
  "params": {
    "path": {
      "owner": "changesets",
      "repo": "action",
    },
  },
}
`;

exports[`version > doesn't include ignored package that got a dependency update in the PR body 1`] = `
{
  "body": {
    "base": "some-branch",
    "body": "This PR was opened by the [Changesets release](https://github.com/anytinz/changesets-gitea-action) Gitea action. When you're ready to do a release, you can merge this and publish to npm yourself or [setup this action to publish automatically](https://github.com/anytinz/changesets-gitea-action#with-publishing). If you're not ready to do a release yet, that's fine, whenever you add more changesets to some-branch, this PR will be updated.


# Releases
## changesets-dev-ignored-package-pkg-b@1.1.0

### Minor Changes

- Awesome feature",
    "head": "changeset-release/some-branch",
    "title": "Version Packages",
  },
  "params": {
    "path": {
      "owner": "changesets",
      "repo": "action",
    },
  },
}
`;

exports[`version > only includes bumped packages in the PR body 1`] = `
{
  "body": {
    "base": "some-branch",
    "body": "This PR was opened by the [Changesets release](https://github.com/anytinz/changesets-gitea-action) Gitea action. When you're ready to do a release, you can merge this and publish to npm yourself or [setup this action to publish automatically](https://github.com/anytinz/changesets-gitea-action#with-publishing). If you're not ready to do a release yet, that's fine, whenever you add more changesets to some-branch, this PR will be updated.


# Releases
## changesets-dev-simple-project-pkg-a@1.1.0

### Minor Changes

- Awesome feature",
    "head": "changeset-release/some-branch",
    "title": "Version Packages",
  },
  "params": {
    "path": {
      "owner": "changesets",
      "repo": "action",
    },
  },
}
`;

exports[`version > updates an existing PR via the API 1`] = `
{
  "body": {
    "body": "This PR was opened by the [Changesets release](https://github.com/anytinz/changesets-gitea-action) Gitea action. When you're ready to do a release, you can merge this and publish to npm yourself or [setup this action to publish automatically](https://github.com/anytinz/changesets-gitea-action#with-publishing). If you're not ready to do a release yet, that's fine, whenever you add more changesets to some-branch, this PR will be updated.


# Releases
## changesets-dev-simple-project-pkg-a@1.1.0

### Minor Changes

- Awesome feature",
    "state": "open",
    "title": "Version Packages",
  },
  "params": {
    "path": {
      "index": 123,
      "owner": "changesets",
      "repo": "action",
    },
  },
}
`;
